<resources>
    <string name="app_name">PowerQoPE</string>
    <string name="welcome_text">Your personal internet security configurator</string>
    <string name="high_security">High Security</string>
    <string name="medium_security">Medium Security</string>
    <string name="low_security">Low Security</string>
    <string name="advanced_options">Advanced options</string>
    <string name="cost_info_high">High Security cost information</string>
    <string name="cost_info_medium">Medium Security cost information</string>
    <string name="cost_info_low">Low Security cost information</string>
    <string name="advanced_desc">Select VPN, DNS, Filter, Cipher options</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_agent">Linux; Android</string>
    <string name="default_user_agent">"MobiPerf-2.0 (Linux; Android)"</string>
    <string name="ping_executable">ping</string>
    <string name="ping6_executable">ping6</string>
    <string name="serverUrl">http://openmobiledata.appspot.com</string>
    <string name="anonymousServerUrl">http://openmobiledata.appspot.com</string>
    <string name="testServerUrl"></string>
    <string name="menuQuit">Quit</string>
    <string name="menumPause">Pause</string>
    <string name="pauseMessage">Measurements are paused.</string>
    <string name="menuResume">Resume</string>
    <string name="resumeMessage">Ready to receive measurements.</string>
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About</string>
    <string name="menuLog">System Log</string>
    <string name="measurementTypePrompt">Measurement Type</string>
    <string name="defaultDomain">www.google.com</string>
    <string name="pingTargetHint">www.google.com</string>
    <string name="pingTargetLabel">Where to ping?</string>
    <string name="tracerouteTargetLabel">Target hostname/IP?</string>
    <string name="UDPBurstTargetLabel">Server name/IP?</string>
    <string name="UDPBurstDirLabel">Direction:</string>
    <string name="UDPBurstIntervalLabel">Interval between packets(ms): </string>
    <string name="UDPBurstTargetHint">www.google.com</string>
    <string name="UDPBurstIntervalHint">1</string>
    <string name="UDPBurstPacketSizeLabel">Packet Size(byte): </string>
    <string name="UDPBurstPacketSizeHint">100</string>
    <string name="UDPBurstPacketCountLabel">Number of packets to be sent: </string>
    <string name="UDPBurstPacketCountHint">16</string>
    <string name="httpUrlHint">www.google.com</string>
    <string name="httpUrlLabel">URL Address</string>
    <string name="checkinIntervalPrefKey">KEY_CHECKEDIN_INTERVAL</string>
    <string name="measureWhenPluggedPrefKey">KEY_MEASURE_WHEN_PLUGGED</string>
    <string name="batteryMinThresPrefKey">KEY_BATTERY_THRES</string>
    <string name="startOnBootPrefKey">KEY_START_ON_BOOT</string>
    <string name="accountPrefKey">PREF_KEY_ACCOUNT</string>
    <string name="dataLimitPrefKey">PREF_KEY_DATA_LIMIT</string>
    <string name="notificationSchedulerStarted">Measurement service has started</string>
    <string name="notificationServiceRunning">Measurements service is running</string>
    <string name="userMeasurementSuccessToast">Measurement is running. Results will show up shortly.</string>
    <string name="userMeasurementFailureToast">The scheduler is busy, please run the measurement later</string>
    <string name="userMeasurementBusySchedulerToast">The scheduler is busy, your measurement will start shortly</string>
    <string name="invalidParameterExceptionMeasurementToast">Some parameters are not correct. Please make sure all measurement parameters are set properly.</string>
    <string name="ioExceptionMeasurementToast">Failed to run test. It\'s possible there is no network connection. Please make sure you have a network connection before running tests.</string>
    <string name="exceptionMeasurementToast">An unknown error occurred when trying to run the measurement test. Please try again.</string>
    <string name="invalidCheckinIntervalToast">Invalid setting! Please choose an interval between 1 and 24 hours</string>
    <string name="invalidBatteryToast">Invalid setting! Please choose a battery level between 0 and 100 percent</string>
    <string name="menuInitializationExceptionToast">Exception occurs during menu initialization.</string>
    <string name="powerThreasholdReachedMsg">Measurement paused - below battery threshold</string>
    <string name="terms">MobiPerf is a useful tool that collects network measurement results for academic research. Please see http://mobiperf.com/privacy for more details. If you agree that we can collect such information, click agree. On the account selection screen, you will have the option to submit results anonymously. If you do not agree, the application will exit.</string>
    <string name="aboutTitle">About</string>
    <string name="aboutText">MobiPerf is an open source application for measuring network performance on mobile platforms. You can measure your network\'s throughput and latency, as well as other useful network metrics. MobiPerf also performs measurements at regular intervals in the background.\n\nThe privacy policy and EULA can be found at http://www.mobiperf.com/privacy </string>
    <string name="aboutContact">\nHomepage:\nhttp://www.mobiperf.com\n\nCode repository:\nhttps://github.com/Mobiperf/MobiPerf\n\nEmail:\nmobiperf@googlegroups.com</string>
    <string name="selectedString">is selected for authenticating with MobiPerf server.</string>
    <string name="defaultUser">Anonymous</string>
    <string name="TCPThroughputDirLabel">Direction:</string>
    <string name="TCPThroughputTargetHint">m-lab</string>
    <string name="channel_name">Speedometer Category</string>
    <string name="channel_description" />
    <string name="scheduled">Scheduled</string>
    <string name="manual">Manual</string>
    <string name="system_log_console">System Log Console</string>
    <string name="radio_Down">Down</string>
    <string name="radio_Up">Up</string>
    <string name="Expand_Advanced_Settings">Expand Advanced Settings</string>
    <string name="Collapse_Advanced_Settings">Collapse Advanced Settings</string>
    <string name="enable_measurements">PREF_KEY_MEASUREMENTS_ENABLED</string>
    <string name="app_description">This application collects the usage data of apps from your phone at regular intervals and sends it to a server for the purpose of academic research. All information being sent to the server is anonymized and researchers in no way can associate the collected data with your identity. </string>
    <string name="helpicon">helpIcon</string>
    <string name="help_image">Help Image</string>
    <string name="listenPortLabel">Port:</string>
    <string name="startBtnLabel">Restart</string>
    <string name="stopBtnLabel">Close</string>
    <string name="filterReloadBtnLabel">Reload filter</string>
    <string name="EnableConfigCheckBox">Advanced settings</string>
    <string name="editFilterLoadCheckBox">Configure filter update</string>
    <string name="editAdditionalHostsCheckBox">Configure additional hosts</string>
    <string name="appWhitelistCheckBox">App whitelist</string>
    <string name="keepAwakeCheckBox">Prevent device sleep</string>
    <string name="EnableAutoStart">Autostart</string>
    <string name="EnableAdfilter">Enable blocking</string>
    <string name="dnsLabel">DNS:</string>
    <string name="manualDNSCheck">Disable DNS server discovery - manual DNS servers below:</string>
    <string name="dnsCfgConfigDialogTitle">DNS server configuration</string>
    <string name="filterUpdateDays">Filter update interval in days:</string>
    <string name="active">Active</string>
    <string name="shortText">Short text</string>
    <string name="URL" translatable="false">URL</string>
    <string name="cfgBackupRestore">Backup and restore</string>
    <string name="backupConfig">Backup configuration</string>
    <string name="restoreBackup">Restore backup</string>
    <string name="restoreDefault">Restore default configuration</string>
    <string name="cnameCloakingConfig">CNAME cloaking protection (aggressive)</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="left" translatable="false">◀</string>
    <string name="right" translatable="false">▶</string>
    <string name="editFilterDialogTitle">Edit filter</string>
    <string name="addFilter">"Add filter"</string>
    <string name="removeFilter">"Remove filter"</string>
    <string name="proxyModeCheckBox">DNS proxy mode without local VPN</string>
    <string name="rootModeCheckBox">Root mode without local VPN</string>
    <string name="proxyLocalOnlyCheckbox">Allow only local DNS proxy requests</string>
    <string name="notificationActive">Active</string>
    <string name="notificationPaused">Paused</string>
    <string name="switch_pause_resume">Tap to switch</string>
    <string name="admin_desc">Allow application to change DNS settings</string>
    <string name="admin_label">DNS Settings permission</string>
    <string name="action_settings">Settings</string>
    <string name="home_btn_choose_country">Choose country</string>
    <string name="home_pop_up_title_choose_country">Choose country</string>
    <string name="server_btn_connect">Connect</string>
    <string name="server_btn_disconnect">Disconnect</string>
    <string name="server_txt_ping">Ping:</string>
    <string name="server_txt_sessions">Sessions:</string>
    <string name="server_txt_speed">Speed:</string>
    <string name="server_txt_city">City:</string>
    <string name="server_error_loading_profile">Error loading profile</string>
    <string name="server_txt_status">Status connection:</string>
    <string name="server_not_connected">Not connected</string>
    <string name="server_list_more">Details</string>
    <string name="mbps">Mbps</string>
    <string name="ms">ms</string>
    <string name="loading_text">Loading...</string>
    <string name="downloading_csv_text">Downloading servers list...</string>
    <string name="parsing_csv_text">Parsing servers list...</string>
    <string name="csv_file_error">Problem with a file reading...</string>
    <string name="csv_file_error_parsing">Problem with a file parsing...</string>
    <string name="network_error">Network error...</string>
    <string name="successfully_loaded">Successfully loaded</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh servers list</string>
    <string name="action_share">Share</string>
    <string name="ok">Ok</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="blocking_ads">Turn on ads filtering</string>
    <string name="more_servers">Get more servers</string>
    <string name="feature_not_available">This feature temporarily is not available</string>
    <string name="feature_not_available_without_perm">Without account information this feature is not available</string>
    <string name="unblock">Ads filtering</string>
    <string name="what_is_my_ip">What is my IP?</string>
    <string name="action_current_connection">Current connection</string>
    <string name="random_connection">Quick connection</string>
    <string name="total_servers">%1$d servers available in the local database now</string>
    <string name="loading_additional_servers">The loading of additional servers</string>
    <string name="current_servers_list">Current servers list</string>
</resources>